# astron-rpa-en

./: BUILD_AFTER_RESTART.bat  BUILD_GUIDE.md  BUILD_GUIDE.zh.md  NEXT_STEPS_AFTER_BUILD.md  README.md  README.zh.md  TRANSLATION_STATUS.md  TRANSLATION_SUMMARY.md  atomCommon_original.json  atom_metadata_english.json  atom_tree_response.json  atomicTree_extract.txt  build.bat  c8a7071_sql.txt  check_yaml.py  conf_skip_engine.yaml  extract_atomCommon.py  extract_tree.py  generate_sql_from_configs.py  load_english_metadata.py  metadata_load_output.txt  rebuild_atom_metadata.py  regenerate_atom_metadata.py  translate_atomCommon.py  translate_atomCommon.sql  translate_atomCommon_db.py  translate_atomCommon_properly.py  translate_atomCommon_remaining.sql  translate_config_files.py  translate_rpa_configs.py  upload_atom_metadata.py  verify_translations.py
.github/workflows/: build-push-backend.yml
docker/: docker-compose.yml
docker/volumes/mysql/: all_atoms.tsv  all_updates.sql  analyze_sql.py  atomCommon_original.json  atomCommon_translated.json  atomcommon_en_only.sql  atomcommon_only_en.sql  atoms_fixed.sql  atoms_ignore.sql  atoms_replace.sql  atoms_split.sql  atoms_utf8.sql  check_endings.py  check_str.py  chinese_words.txt  compare_escapes.py  convert_unix.py  create_base64_sql.py  create_hex_sql.py  create_replace.py  current_atomCommon.json  current_db.json  db_atomcommon.txt  fix_311.sql  (+52 more)
engine/: build.bat  translate_meta_json.py
engine/servers/astronverse-picker/: pyproject.toml
frontend/: package-lock.json  pnpm-lock.yaml
resources/: conf.json  conf.yaml
(+60 files in other folders)
