[project]
name = "astronverse-picker"
version = "1.0.1"
description = "astronverse-picker."
requires-python = ">=3.13"

dependencies = [
    "astronverse-baseline",
    "astronverse-locator",
    "websockets",
    "anyio",
    "pydantic",
    "psutil",
    "requests",
    "pyautogui",
    "pandas",
    "pywin32; sys_platform == 'win32'",
    "uiautomation; sys_platform == 'win32'",
    "pythonnet; sys_platform == 'win32'"
]

[project.optional-dependencies]
pywinhook = ["pyWinhook; sys_platform == 'win32'"]

[tool.uv.sources]
astronverse-baseline = {path = "../../shared/astronverse-baseline", editable = true}
astronverse-locator = {path = "../../shared/astronverse-locator", editable = true}

[tool.hatch.build.targets.wheel]
packages = ["src/astronverse"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"